--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<body>
+
 <header>ALURAFLIX</header>
 
 
@@ -6,3 +8,8 @@
 
 
 
+https://www.google.com/url?sa=i&url=https%3A%2F%2Frecnoticias.com.br%2Fhomem-aranha-o-heroi-que-inspira-geracoes%2F&psig=AOvVaw3QPoHRQGZaYHxAhWulVOfr&ust=1761820663674000&source=images&cd=vfe&opi=89978449&ved=0CBgQjhxqFwoTCLjQvI2dyZADFQAAAAAdAAAAABAY
+
+
+
+</body>
